Add real images, update homepage layout, clean up team page

--- a/client.html
+++ b/client.html
@@ -31,12 +31,7 @@
 
     <!-- Page Hero -->
     <section class="page-hero">
-        <div class="hero-background placeholder-image">
-            <div class="placeholder-text">
-                <div class="placeholder-icon">🏸</div>
-                <p>racket-hero.jpg — Close-up of a racket and shuttlecock/ball on a court, similar to a badminton aesthetic.</p>
-            </div>
-        </div>
+        <div class="hero-background" style="background-image: url('assets/images/racket-hero.jpg'); background-size: cover; background-position: center;"></div>
         <div class="hero-content">
             <h1>OUR CLIENT</h1>
         </div>
@@ -46,11 +41,8 @@
     <section style="padding: 6rem 0;">
         <div class="container">
             <div class="two-col">
-                <div class="two-col-image placeholder-image fade-in-left">
-                    <div class="placeholder-text">
-                        <div class="placeholder-icon">♿</div>
-                        <p>mission-image.jpg — Photo of adaptive PE class or student in wheelchair doing sports activity</p>
-                    </div>
+                <div class="two-col-image fade-in-left">
+                    <img src="assets/images/mission-image.webp" alt="Adaptive PE class with students in wheelchairs participating in sports">
                 </div>
                 <div class="two-col-content fade-in-right">
                     <h3>PROJECT MISSION</h3>
