--- a/prototypes.html
+++ b/prototypes.html
@@ -48,17 +48,14 @@
 
             <!-- Prototype Images -->
             <div class="prototype-images stagger-children">
-                <div class="prototype-image placeholder-image">
-                    <div class="placeholder-text">
-                        <div class="placeholder-icon">🔧</div>
-                        <p>gauntlet-v1.jpg — Screenshot of SolidWorks CAD model "Forearm prototype 1" — cylindrical forearm sleeve with mounting tabs/slots. UI cropped out.</p>
-                    </div>
+                <div class="prototype-image">
+                    <img src="assets/images/gauntlet-v1.png" alt="SolidWorks CAD model of Forearm Gauntlet prototype 1 — cylindrical forearm sleeve with mounting tabs">
                 </div>
-                <div class="prototype-image placeholder-image">
-                    <div class="placeholder-text">
-                        <div class="placeholder-icon">🔧</div>
-                        <p>gauntlet-v1-2.jpg — Screenshot of SolidWorks CAD model "Forearm prototype 1.2" — updated version with cutout/opening on underside. UI cropped out.</p>
-                    </div>
+                <div class="prototype-image">
+                    <img src="assets/images/gauntlet-v1-2.png" alt="SolidWorks CAD model of Forearm Gauntlet prototype 1.2 — updated with cutout on underside">
+                </div>
+                <div class="prototype-image">
+                    <img src="assets/images/prototype-image.png" alt="Additional prototype view">
                 </div>
             </div>
 
