--- a/team.html
+++ b/team.html
@@ -42,82 +42,29 @@
     <section style="padding: 6rem 0;">
         <div class="container">
             <div class="team-grid stagger-children">
-                <!-- Rushi Singh -->
-                <div class="team-card">
-                    <div class="team-card-image placeholder-image" style="aspect-ratio: 1;">
-                        <div class="placeholder-text">
-                            <div class="placeholder-icon">👤</div>
-                            <p>rushi-singh.jpg — Headshot of Rushi Singh</p>
-                        </div>
-                    </div>
-                    <div class="team-card-info">
-                        <h4>Rushi Singh</h4>
-                    </div>
+                <div class="team-card team-card-name-only">
+                    <div class="team-card-avatar">RS</div>
+                    <div class="team-card-info"><h4>Rushi Singh</h4></div>
                 </div>
-
-                <!-- Grace Carey -->
-                <div class="team-card">
-                    <div class="team-card-image placeholder-image" style="aspect-ratio: 1;">
-                        <div class="placeholder-text">
-                            <div class="placeholder-icon">👤</div>
-                            <p>grace-carey.jpg — Headshot of Grace Carey</p>
-                        </div>
-                    </div>
-                    <div class="team-card-info">
-                        <h4>Grace Carey</h4>
-                    </div>
+                <div class="team-card team-card-name-only">
+                    <div class="team-card-avatar">GC</div>
+                    <div class="team-card-info"><h4>Grace Carey</h4></div>
                 </div>
-
-                <!-- Bianca Hammer -->
-                <div class="team-card">
-                    <div class="team-card-image placeholder-image" style="aspect-ratio: 1;">
-                        <div class="placeholder-text">
-                            <div class="placeholder-icon">👤</div>
-                            <p>bianca-hammer.jpg — Headshot of Bianca Hammer</p>
-                        </div>
-                    </div>
-                    <div class="team-card-info">
-                        <h4>Bianca Hammer</h4>
-                    </div>
+                <div class="team-card team-card-name-only">
+                    <div class="team-card-avatar">BH</div>
+                    <div class="team-card-info"><h4>Bianca Hammer</h4></div>
                 </div>
-
-                <!-- Escanor Valgas Schmidt -->
-                <div class="team-card">
-                    <div class="team-card-image placeholder-image" style="aspect-ratio: 1;">
-                        <div class="placeholder-text">
-                            <div class="placeholder-icon">👤</div>
-                            <p>escanor-valgas-schmidt.jpg — Headshot of Escanor Valgas Schmidt</p>
-                        </div>
-                    </div>
-                    <div class="team-card-info">
-                        <h4>Escanor Valgas Schmidt</h4>
-                    </div>
+                <div class="team-card team-card-name-only">
+                    <div class="team-card-avatar">EV</div>
+                    <div class="team-card-info"><h4>Escanor Valgas Schmidt</h4></div>
                 </div>
-
-                <!-- Albert Wang -->
-                <div class="team-card">
-                    <div class="team-card-image placeholder-image" style="aspect-ratio: 1;">
-                        <div class="placeholder-text">
-                            <div class="placeholder-icon">👤</div>
-                            <p>albert-wang.jpg — Headshot of Albert Wang</p>
-                        </div>
-                    </div>
-                    <div class="team-card-info">
-                        <h4>Albert Wang</h4>
-                    </div>
+                <div class="team-card team-card-name-only">
+                    <div class="team-card-avatar">AW</div>
+                    <div class="team-card-info"><h4>Albert Wang</h4></div>
                 </div>
-
-                <!-- Egan Bauersfeld -->
-                <div class="team-card">
-                    <div class="team-card-image placeholder-image" style="aspect-ratio: 1;">
-                        <div class="placeholder-text">
-                            <div class="placeholder-icon">👤</div>
-                            <p>egan-bauersfeld.jpg — Headshot of Egan Bauersfeld</p>
-                        </div>
-                    </div>
-                    <div class="team-card-info">
-                        <h4>Egan Bauersfeld</h4>
-                    </div>
+                <div class="team-card team-card-name-only">
+                    <div class="team-card-avatar">EB</div>
+                    <div class="team-card-info"><h4>Egan Bauersfeld</h4></div>
                 </div>
             </div>
 
@@ -127,13 +74,8 @@
                     <h2>OUR CLIENT</h2>
                     <div class="section-divider"></div>
                 </div>
-                <div class="team-card client-card fade-in">
-                    <div class="team-card-image placeholder-image" style="aspect-ratio: 1;">
-                        <div class="placeholder-text">
-                            <div class="placeholder-icon">👩‍🏫</div>
-                            <p>sarah-brockberg.jpg — Headshot of Sarah Brockberg</p>
-                        </div>
-                    </div>
+                <div class="team-card team-card-name-only client-card fade-in">
+                    <div class="team-card-avatar" style="background: linear-gradient(135deg, #3d7a5f, #2d5a45);">SB</div>
                     <div class="team-card-info">
                         <h4>Sarah Brockberg</h4>
                         <p>Adapted Physical Education Teacher<br>School District D49, Colorado Springs, CO</p>
