--- a/index.html
+++ b/index.html
@@ -31,17 +31,11 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <div class="hero-background placeholder-image">
-            <div class="placeholder-text">
-                <div class="placeholder-icon">🎾</div>
-                <p>hero-background.jpg — Aerial or action shot of adaptive sports / tennis / racket sport. Should feel energetic and inclusive.</p>
-            </div>
-        </div>
+        <div class="hero-background" style="background-image: url('assets/images/hero-background.jpg'); background-size: cover; background-position: center;"></div>
         <div class="hero-content">
             <span class="hero-badge">CU Boulder Engineering</span>
             <h1>BEARGE</h1>
             <p class="hero-subtitle">Adaptive Racket Sport Accessibility Project</p>
-            <a href="mailto:teambearge@gmail.com" class="btn btn-primary">Get In Touch</a>
         </div>
     </section>
 
@@ -56,39 +50,6 @@
                 <p>Our philosophy is rooted in the belief that access to physical activity should never be limited by ability. We recognize that traditional sports equipment often assumes a level of mobility, coordination, and strength that not all students possess. Rather than asking students to adapt to existing equipment, we believe the equipment should adapt to the student.</p>
                 <p>By prioritizing simplicity, safety, and inclusivity in our design, we aim to reduce physical and cognitive barriers that prevent participation in racket-based activities. Our approach emphasizes dignity, independence, and engagement — allowing students in adaptive physical education to focus on movement, enjoyment, and confidence rather than limitations.</p>
                 <p>Ultimately, our goal is to create a solution that supports meaningful participation and reinforces the idea that sports and play are for everyone.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- CTA Section -->
-    <section class="cta" id="contact">
-        <div class="container">
-            <div class="fade-in">
-                <h2>GET INVOLVED</h2>
-                <p>Interested in supporting or learning more about this project?</p>
-                <div class="cta-contact">
-                    <div class="cta-contact-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-                            <polyline points="22,6 12,13 2,6"></polyline>
-                        </svg>
-                        <span>teambearge@gmail.com</span>
-                    </div>
-                    <div class="cta-contact-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
-                            <circle cx="12" cy="10" r="3"></circle>
-                        </svg>
-                        <span>CU Boulder</span>
-                    </div>
-                    <div class="cta-contact-item">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
-                        </svg>
-                        <span>+1 (970) 461-0033</span>
-                    </div>
-                </div>
-                <a href="mailto:teambearge@gmail.com" class="btn btn-outline">Contact Us</a>
             </div>
         </div>
     </section>
