Change homepage title

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="hero-background" style="background-image: url('assets/images/hero-background.jpg'); background-size: cover; background-position: center;"></div>
         <div class="hero-content">
             <span class="hero-badge">CU Boulder Engineering</span>
-            <h1>BEARGE</h1>
+            <h1>StrikeToo</h1>
             <p class="hero-subtitle">Adaptive Racket Sport Accessibility Project</p>
         </div>
     </section>
