Fix image scaling, add Sarah Brockberg photo

--- a/team.html
+++ b/team.html
@@ -74,8 +74,8 @@
                     <h2>OUR CLIENT</h2>
                     <div class="section-divider"></div>
                 </div>
-                <div class="team-card team-card-name-only client-card fade-in">
-                    <div class="team-card-avatar" style="background: linear-gradient(135deg, #3d7a5f, #2d5a45);">SB</div>
+                <div class="team-card client-card fade-in">
+                    <img src="assets/images/sarah-brockberg.jpg" alt="Sarah Brockberg" style="width:100%;height:auto;display:block;">
                     <div class="team-card-info">
                         <h4>Sarah Brockberg</h4>
                         <p>Adapted Physical Education Teacher<br>School District D49, Colorado Springs, CO</p>
