--- a/client.html
+++ b/client.html
@@ -58,11 +58,8 @@
     <section style="padding: 6rem 0; background: rgba(45, 90, 69, 0.1);">
         <div class="container">
             <div class="two-col reverse">
-                <div class="two-col-image placeholder-image fade-in-right">
-                    <div class="placeholder-text">
-                        <div class="placeholder-icon">👩‍🏫</div>
-                        <p>sarah-brockberg.jpg — Professional headshot of Sarah Brockberg</p>
-                    </div>
+                <div class="two-col-image fade-in-right">
+                    <img src="assets/images/sarah-brockberg.jpg" alt="Sarah Brockberg, Adapted Physical Education Teacher">
                 </div>
                 <div class="two-col-content fade-in-left">
                     <h3>SARAH BROCKBERG</h3>
