Fix Sarah photo cropping - remove forced aspect ratio and overflow hidden

--- a/client.html
+++ b/client.html
@@ -58,8 +58,8 @@
     <section style="padding: 6rem 0; background: rgba(45, 90, 69, 0.1);">
         <div class="container">
             <div class="two-col reverse">
-                <div class="two-col-image fade-in-right" style="display:flex;align-items:center;justify-content:center;">
-                    <img src="assets/images/sarah-brockberg.jpg" alt="Sarah Brockberg, Adapted Physical Education Teacher" style="width:auto;max-width:100%;height:auto;display:block;border-radius:12px;">
+                <div class="two-col-image fade-in-right">
+                    <img src="assets/images/sarah-brockberg.jpg" alt="Sarah Brockberg, Adapted Physical Education Teacher">
                 </div>
                 <div class="two-col-content fade-in-left">
                     <h3>SARAH BROCKBERG</h3>
