--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
                     <div class="section-divider"></div>
                 </div>
                 <div class="team-card client-card fade-in">
-                    <img src="assets/images/sarah-brockberg.jpg" alt="Sarah Brockberg" style="width:auto;max-width:100%;height:auto;display:block;margin:0 auto;border-radius:12px 12px 0 0;">
+                    <img src="assets/images/sarah-brockberg.jpg" alt="Sarah Brockberg" style="width:100%;height:auto;display:block;">
                     <div class="team-card-info">
                         <h4>Sarah Brockberg</h4>
                         <p>Adapted Physical Education Teacher<br>School District D49, Colorado Springs, CO</p>
