Expand prototype feedback content for design review checklist

--- a/prototypes.html
+++ b/prototypes.html
@@ -61,7 +61,8 @@
 
             <!-- Description -->
             <div class="prototype-description fade-in">
-                <p>Our first prototype is a forearm gauntlet — a rigid sleeve that mounts to the forearm and holds a racket attachment, removing the need for the student to grip the implement at all. The gauntlet is modeled after AFO (Ankle-Foot Orthosis) bracing principles: a form-fitting shell that distributes load across the limb rather than concentrating it at the hand.</p>
+                <p>Our first prototype is a forearm gauntlet — a rigid sleeve that mounts to the forearm and holds a racket attachment, removing the need for the student to grip the implement at all. The core design premise is that the racket is secured to the limb rather than held in the hand, redistributing the mechanical demands of a striking motion from the fingers and wrist to the forearm and arm as a whole.</p>
+                <p style="margin-bottom: 0;">The gauntlet is modeled after AFO (Ankle-Foot Orthosis) bracing principles: a form-fitting shell that distributes load across the limb rather than concentrating it at a single point of contact. This approach was selected because it eliminates the three compounding motor demands — grasp, wrist stabilization, and directional control — that collectively prevent many of Sarah's students from participating in racket-based activities.</p>
             </div>
 
             <!-- Feedback Cards -->
@@ -71,9 +72,10 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path>
                         </svg>
-                        What Sarah Liked
+                        What Sarah Endorsed
                     </h4>
-                    <p>Sarah was immediately receptive to the concept of a forearm-mounted attachment. Removing the grip requirement entirely addresses the core challenge her students face, and she appreciated that the gauntlet could work for students across a wide range of hand mobility levels.</p>
+                    <p>Sarah responded positively to the foundational concept of a forearm-mounted attachment. From her perspective as an APE teacher, the single most significant barrier for her students is the grip requirement — many of her students have limited or no active hand function, meaning any solution that depends on grasping an implement is immediately inaccessible to a substantial portion of her population.</p>
+                    <p style="margin-bottom: 0;">By moving the point of attachment from the hand to the forearm, the gauntlet concept eliminates that barrier entirely. Sarah noted that this approach could accommodate students across a wide spectrum of hand mobility — from those with severely reduced grip strength to those with no voluntary hand movement at all — making it broadly applicable rather than limited to a narrow subset of her students. She confirmed the forearm-mounted direction was worth developing further.</p>
                 </div>
                 <div class="feedback-card">
                     <h4>
@@ -82,31 +84,46 @@
                             <line x1="12" y1="8" x2="12" y2="12"></line>
                             <line x1="12" y1="16" x2="12.01" y2="16"></line>
                         </svg>
-                        What Needed to Change
+                        A Critical Design Flaw: Wrist Dorsiflexion
                     </h4>
-                    <p>When Egan demonstrated the prototype by wrapping it around his forearm, Sarah noticed that his hand was bent into an awkward dorsiflexed position. She pointed out that most of her students would be physically unable to hold their hands in that orientation — and for those who could, it would be uncomfortable and potentially harmful over time.</p>
+                    <p>When Egan demonstrated the prototype by mounting it on his own forearm, Sarah immediately identified a significant ergonomic problem: the geometry of the v1 design forced the user's hand into a dorsiflexed position — that is, the wrist was bent backward (toward the top of the forearm), with the palm facing downward and the hand extended away from the body's midline.</p>
+                    <p style="margin-bottom: 0;">Sarah explained that dorsiflexion is not a viable resting position for the majority of her students. Many of them have hypertonia, spasticity, or limited voluntary wrist control, meaning they are physically unable to achieve or sustain that wrist angle. For those who could approximate it, maintaining dorsiflexion over the duration of an activity would cause discomfort and potentially strain or injury. Sarah was direct: this wrist orientation disqualified the v1 design from use with her population as built, and the geometry needed to be fundamentally reconsidered before the prototype could be clinically appropriate.</p>
                 </div>
                 <div class="feedback-card">
                     <h4>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                             <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
                         </svg>
-                        Her Suggestions
+                        Sarah's Specific Recommendations
                     </h4>
-                    <p>Sarah recommended that the gauntlet be redesigned around a neutral hand position — the natural resting position of the hand when the arm hangs relaxed at the side, with no forced extension or flexion of the wrist. She also flagged that some of her students cannot open their hands at all, meaning any design needs a closed-hand variant as well.</p>
+                    <p><strong>Neutral hand position:</strong> Sarah's primary recommendation was to redesign the gauntlet geometry around a neutral wrist position — the posture the hand naturally assumes when the arm hangs relaxed at the side, with no active extension or flexion of the wrist. This position is clinically comfortable, does not require active muscle engagement to maintain, and is achievable by a far broader range of students than dorsiflexion.</p>
+                    <p><strong>Closed-hand variant:</strong> Sarah also flagged that a subset of her students cannot open their hands at all due to spasticity or fixed contracture. Any design that assumes the hand can be placed flat against a surface or spread open would exclude this group. She specifically requested that the team develop a variant that accommodates a closed-fist or relaxed-curl hand posture.</p>
+                    <p style="margin-bottom: 0;"><strong>Open-hand variant:</strong> For students who can open their hands but cannot actively grip or squeeze, Sarah expressed interest in a palm-spread interface — a design that secures the implement against the open palm without requiring the student to close their fingers around it.</p>
                 </div>
             </div>
 
-            <!-- Next Steps -->
+            <!-- Feedback Traceability -->
             <div class="next-steps fade-in">
-                <h3>OUR NEXT STEPS</h3>
-                <p style="text-align: center; margin-bottom: 2rem; color: var(--cream-dark);">Sarah's feedback directly launched our next design phase. We are now developing three complementary components:</p>
+                <h3>IMPLEMENTING SARAH'S FEEDBACK: OUR NEXT STEPS</h3>
+                <p style="text-align: center; margin-bottom: 2rem; color: var(--cream-dark);">Each element of Sarah's feedback maps directly to a concrete design action in our next phase. The three components below are being developed in parallel:</p>
                 <ol>
-                    <li><strong>Redesigned Forearm Gauntlet</strong> — Revised to accommodate a neutral hand position, inspired by AFO form-fitting design principles. The attachment point for the racket will be repositioned accordingly.</li>
-                    <li><strong>Closed-Hand Grip Attachment</strong> — A mitt-style interface for students who cannot open their hands. This will use a neutral closed-fist position and attach securely to the gauntlet.</li>
-                    <li><strong>Open-Hand Grip Attachment</strong> — A palm-spread interface for students who can open their hands but cannot grip. This may use a fold-over or wrap design to secure the implement without requiring active grip strength.</li>
+                    <li>
+                        <strong>Redesigned Forearm Gauntlet — Neutral Wrist Geometry</strong><br>
+                        <span style="color: var(--cream-dark);">Responding to: Sarah's identification of dorsiflexion as clinically disqualifying.</span><br>
+                        The gauntlet shell will be fully redesigned so that when worn, the user's wrist rests in a neutral position with no forced extension or flexion. The racket mounting point will be repositioned to align with the forearm's natural axis in this posture. We will draw on AFO design literature to ensure the load distribution and shell curvature are appropriate for low-mobility users, and the revised geometry will be validated against measurements of Sarah's students' wheelchairs and arm positions.
+                    </li>
+                    <li>
+                        <strong>Closed-Hand Grip Attachment</strong><br>
+                        <span style="color: var(--cream-dark);">Responding to: Sarah's identification of students with fixed or spastic hand closure who cannot open their hands.</span><br>
+                        A mitt-style interface designed around a neutral closed-fist position — the natural curl of the hand at rest with no active grip required. This attachment will connect to the redesigned gauntlet and secure the implement against the dorsal surface of the closed hand, distributing contact across the hand rather than concentrating pressure at a single point.
+                    </li>
+                    <li>
+                        <strong>Open-Hand Grip Attachment</strong><br>
+                        <span style="color: var(--cream-dark);">Responding to: Sarah's identification of students who can open their hands but cannot grip or squeeze.</span><br>
+                        A palm-spread interface that holds the implement against an open, flat hand without requiring active finger closure. This may use a fold-over, Velcro wrap, or molded palm cradle design. The key constraint is that the student must be able to don and doff the attachment independently or with minimal assistance, consistent with Sarah's emphasis on student dignity and independence.
+                    </li>
                 </ol>
-                <p class="meeting-note">We are meeting with Sarah again on Monday, March 2nd — just before our Preliminary Design Review — to validate these directions and gather any additional feedback before we finalize our designs.</p>
+                <p class="meeting-note">We are meeting with Sarah again on Monday, March 2nd — immediately before our Preliminary Design Review — to present these three directions, validate the neutral-wrist geometry against her students' needs, and gather any additional constraints before we finalize our designs.</p>
             </div>
         </div>
     </section>
